Register, login and linter setup linters for React
